using Enum for Gender and TargetGender
